<resources>
    <string-array name="langue_array">
        <item>Français</item>
        <item>Anglais</item>
    </string-array>

    <string name="app_name">ProtX</string>
    <string name="protx_logo">Protx Logo</string>
    <string name="produits">Produits</string>
    <string name="assistance">Assistance</string>
    <string name="param_tres">Paramètres</string>
    <string name="fond_ecran">Fond décran halteres</string>
    <string name="logo_de_projet_paris_8_tudiant">Logo de projet étudiant univesité paris 8</string>
    <string name="acceder">Accéder</string>
    <string name="assistan">Assistance</string>
    <string name="bouton_retourner">Bouton retourner</string>
    <string name="age">Âge</string>
    <string name="taille">Taille (cm)</string>
    <string name="poids_kg">Poids (kg)</string>
    <string name="objectif">Objectif</string>
    <string name="envoyer">Envoyer</string>
    <string name="remplir">Veuillez remplir tous les champs</string>
    <string name="rechercher">Rechercher</string>
    <string name="Aide_assistance_paragraphe">Remplissez ce formulaire pour que nous puissions vous recommander le produit le mieux adapté à vos besoins.</string>
    <string name="produit_image">produit_image</string>
    <string name="produit_nom">Produit_Nom</string>
    <string name="apercu">Aperçu</string>
    <string name="parametres">Paramètres</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="profil_paragraphe">Gérez vos expériences et vos paramètres de compte</string>
    <string name="modifier_prenom">modifier prenom</string>
    <string name="modifier_nom">modifier nom</string>
    <string name="modifier_age">modifier age</string>
    <string name="modifier_taille">modifier taille</string>
    <string name="se_connecter">Se connecter</string>
    <string name="ignorer">Ignorer</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmation">Confirmation</string>
    <string name="profil">Profil</string>
    <string name="informations_personelles">Informations personelles</string>
    <string name="modifier_mes_informations">Modifier mes informations</string>
    <string name="langue">Langue</string>
    <string name="francais">Français</string>
    <string name="changer_la_langue">Changer la langue</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="fermer">Fermer</string>
    <string name="english">English</string>
    <string name="rechercheVide">Le champ de saisie est vide</string>
    <string name="rienTrouve">Oups ! On n’a rien trouvé. Utilisez d’autres mots.</string>
    <string name="recherchebouton">rechercheBouton</string>
    <string name="categorie">Catégorie</string>
    <string name="prix">Prix</string>
    <string name="format">Format</string>
    <string name="description">Description</string>
    <string name="portion">Portion</string>
    <string name="composition">Composition</string>
    <string name="bare">Bare</string>
    <string name="ajouter_au_panier">Ajouter au panier</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="choixQnt">Saisissez la quantité</string>
    <string name="produitAjoutePanier">Le produit a été ajouté au panier</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="identifiantIncorecte">Identifiants incorrects</string>
    <string name="MdpConfirmation">La confirmation de mot de passe est incorrecte</string>
    <string name="inscriptionReussi">Inscription réussie</string>
    <string name="misejour">Informations mises à jour</string>
    <string name="introuvable">Utilisateur introuvable, veuillez vous reconnecter</string>
    <string name="modifier_mon_mot_de_passe">Modifier mon mot de passe</string>
    <string name="mot_de_passe_actuel">Mot de passe actuel</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="miseajour_mot_de_passe">Mot de passe modifié</string>
    <string name="MdpIncorrect">Mot de passe acutel incorrect</string>
    <string name="mdpIncorrect">Mot de passe incorrect</string>
    <string name="existant">Il existe un utilisteur cet identifiant</string>
    <string name="retour_assistance">Retour d’assistance</string>
    <string name="aucunProduitTrouve">Nous n’avons trouvé aucun produit. Vous pouvez consulter nos autres produits ou réessayer avec des informations différentes.</string>
    <string name="SelonIMC">Votre IMC :</string>
    <string name="perte_poids">Perte de poids</string>
    <string name="prise_poids">Prise de masse</string>
    <string name="performance">Amélioration des performances</string>
    <string name="maintien">Maintien de la forme</string>
    <string name="cas1">Nous vous conseillons de ne pas consommer ces compléments alimentaires si vous avez moins de 18 ans. \n \n Ces produits sont formulés pour des adultes et n’ont pas été testés pour une utilisation chez les mineurs. Leur sécurité et leur efficacité ne peuvent donc pas être garanties pour votre âge. \n \n Nous vous recommandons d’en parler avec un professionnel de santé avant toute prise de complément alimentaire.</string>
    <string name="cas2">Votre IMC est inférieur à la normale. Nous vous conseillons d’orienter votre choix vers des compléments favorisant la prise de masse.\n\n Ces recommandations ne remplacent pas un avis médical, il est important de consulter un professionnel de santé.</string>
    <string name="cas3">Votre IMC est supérieur à la normale. Nous vous conseillons d’orienter votre choix vers des compléments favorisant la perte de poids.\n\nCes recommandations ne remplacent pas un avis médical, il est important de consulter un professionnel de santé.</string>
    <string name="cas4">Pour une perte de poids, vous pouvez privilégier ces compléments qui soutiennent votre objectif.\n\nCes recommandations ne remplacent pas un avis médical il est important de consulter un professionnel de santé.</string>
    <string name="cas5">Pour une prise de masse, vous pouvez privilégier ces compléments qui soutiennent votre objectif.\n\nCes recommandations ne remplacent pas un avis médical il est important de consulter un professionnel de santé.</string>
    <string name="cas6">Pour améliorer vos performances, privilégiez ces compléments qui soutiennent votre objectif.\n\nCes recommandations ne remplacent pas un avis médical il est important de consulter un professionnel de santé.</string>
    <string name="cas7">Pour le maintien de la forme, vous pouvez privilégier ces compléments qui soutiennent votre objectif.\n\nCes recommandations ne remplacent pas un avis médical il est important de consulter un professionnel de santé.</string>
    <string name="propos_de_nous">À propos de nous</string>

    <string name="descriptionApp">
        ProtX est une application mobile développée dans le cadre d\'un projet académique.
        \n\nSon objectif est de proposer une solution pratique et fonctionnelle permettant la présentation de compléments alimentaires destinés aux athlètes.
        \n\n\n\nCe projet n\'a aucun but lucratif, et toute ressemblance avec des entreprises existantes est purement fortuite.
        \n\nLes compléments alimentaires présentés dans l\'application sont des produits commercialisés par l\'entreprise algérienne GoldenBody.
        \n\nLes images et informations associées à ces produits sont réutilisées exclusivement à des fins pédagogiques et non commerciales.
        \n\n\n\nProtX s\'inscrit dans la continuité d’un projet de développement web réalisé dans le cadre du projet de fin d\'études pour l\'année universitaire 2024/2025.
        \n\nLe code source est disponible sur GitHub : AnisAb2002.
        \n\n\n\nL\'application a été conçue et développée par Anis ABDAT, étudiant en 3ème année de Licence Informatique – Informatiques Systèmes Embarqués et Interactifs à l\'Université Paris 8 Vincennes – Saint-Denis, sous l\'encadrement de M. Andrew O\'SHEI.</string>
    <string name="supprimer_profil">Supprimer mon profil</string>
    <string name="vouloir_supprimer">Êtes-vous sûr de vouloir supprimer votre profil ?\nCette action est irréversible… et cela nous briserait le cœur</string>
    <string name="annuler">Annuler</string>
    <string name="aucunProduitErreur">Erreur lors du chargement des produits.\nVeuillez vérifier votre connexion et réessayer.</string>
    <string name="panier">Panier</string>
    <string name="passer_commande">Passer une commande</string>
    <string name="vider_panier">Vider le panier</string>
    <string name="votre_panier_est_vide">Votre panier est vide</string>
    <string name="total">Total :</string>
    <string name="adresse">Adresse</string>
    <string name="num_tel">Téléphone</string>
    <string name="produit">Produit</string>
    <string name="quantite">Quantité</string>
    <string name="sous_total">Sous-total</string>
    <string name="numero_invalide">Numéro de téléphone invalide</string>
    <string name="paiement">Paiement</string>
    <string name="valider_paiement">Valider le paiement</string>
    <string name="titulaire">Nom du titulaire</string>
    <string name="num_ro_de_carte">Numéro de carte</string>
    <string name="carte_invalide">Numéro de carte invalide</string>
    <string name="cvc_invalide">CVC invalide</string>
    <string name="date">Date d\'expiration</string>
    <string name="cvc">CVC</string>
    <string name="erreurDate">Date d\'expiration invalide</string>
    <string name="confirmation_achat">Merci pour votre achat !\nVotre commande a bien été enregistrée.</string>
    <string name="mes_commandes">Mes achats</string>
    <string name="aucunAchat">Vous n’avez encore effectué aucun achat.</string>
    <string name="ouvrir_compte">Veuillez vous connecter à votre compte</string>
    <string name="verifierConnexion">Veuillez vérifier votre connexion Internet.</string>
    <string name="mois">MM</string>
    <string name="aa">AA</string>
</resources>