<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".CommandeReussie">


    <RelativeLayout
        android:id="@+id/layout_up"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingHorizontal="20dp"
        android:paddingTop="40dp"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/retourBouton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/grey"
            android:contentDescription="@string/bouton_retourner"
            app:srcCompat="@drawable/arrow_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/titreLangue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/confirmation"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layout_up"
        android:padding="50dp"
        tools:ignore="UseCompoundDrawables">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/confirmation_achat" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/rechercheVide"
            app:srcCompat="@drawable/happy_24"
            app:tint="@color/white"
            android:backgroundTint="@color/grey"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:id="@+id/boutonFermer"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:text="@string/fermer"/>
</RelativeLayout>