<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav">

        <ImageView
            android:contentDescription="@string/protx_logo"
            android:layout_width="280dp"
            android:layout_centerHorizontal="true"
            android:layout_height="90dp"
            android:src="@drawable/logo"
            android:id="@+id/protx_logo_img"
            />
        <LinearLayout
            android:layout_below="@+id/protx_logo_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/bouton_bar">
            <ImageButton
                android:id="@+id/rechercherBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@string/recherchebouton"
                app:srcCompat="@drawable/search_24"
                app:tint="@color/grey"
                android:backgroundTint="@color/white"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:id="@+id/assistanceBtn"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:text="@string/assistance"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginStart="2dp"
                android:id="@+id/profilBtn"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:text="@string/profil"/>
            <ImageButton
                android:id="@+id/boutonPanier"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/ajouter_au_panier"
                app:srcCompat="@drawable/cart_24"
                app:tint="@color/grey"
                android:backgroundTint="@color/white"/>
        </LinearLayout>
        <TextView
            android:id="@+id/produits_desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bouton_bar"
            android:gravity="center"
            android:textSize="15sp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white"
            android:text=""/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav"
        android:orientation="horizontal"
        android:paddingBottom="30dp"
        android:contentDescription="@string/produits">

        <LinearLayout
            android:id="@+id/containerProduits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"/>

    </ScrollView>




</RelativeLayout>