<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_dumbels">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/logo_p8"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo_de_projet_paris_8_tudiant"
            app:srcCompat="@drawable/logos_projets_etudiant" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/protx_logo"
            app:srcCompat="@drawable/logo" />
        <Button
            android:id="@+id/buttonSeConnecter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/se_connecter"
            android:layout_gravity="center"
            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/buttonIgnorer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/ignorer"
            android:layout_gravity="center"
            android:paddingHorizontal="22dp"
            android:paddingVertical="8dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>