<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Apropos"
    android:background="@color/grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="UselessParent"
        android:id="@+id/layout_up">

        <ImageButton
            android:id="@+id/retourBouton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/bouton_retourner"
            app:srcCompat="@drawable/arrow_back"
            app:tint="@color/white"
            android:backgroundTint="@color/grey"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/propos_de_nous"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_up">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingVertical="30dp"
                android:paddingHorizontal="30dp"
                android:justificationMode="inter_word"
                android:textSize="18sp"
                android:text="@string/descriptionApp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/logo_de_projet_paris_8_tudiant"
                    android:src="@drawable/logos_projets_etudiant"
                    android:alpha="0.8"
                    android:layout_weight="7"/>
                <ImageView
                    android:layout_width="1dp"
                    android:alpha="0.4"
                    android:layout_marginStart="5dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/protx_logo"
                    android:src="@drawable/rounded_bg"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/protx_logo"
                    android:src="@drawable/logo"
                    android:paddingHorizontal="10dp"
                    android:alpha="0.8"
                    android:layout_weight="8"/>
                <ImageView
                    android:layout_width="1dp"
                    android:alpha="0.4"
                    android:layout_marginStart="5dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/protx_logo"
                    android:src="@drawable/rounded_bg"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:alpha="0.8"
                    android:contentDescription="@string/protx_logo"
                    android:src="@drawable/logo_white_anis"
                    android:layout_weight="7"/>
            </LinearLayout>




        </LinearLayout>

    </ScrollView>




</RelativeLayout>